--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 
         <h3>1. Katamari</h3>
         <p>The Katamari Easter Egg Is A Fun Time Passer, That like the katamari Game, You can use a mouse cursor or drag across the screen, and make all the text amd images stick to the ball!</p>
-        <button href="https://www.google.com/search?q=Katamari">Katamari</button>
-        </div>
+        <button class="Karamari Btn" onclick="window.open('http://google.com/search?q=Katamari','_blank')">Katamari</button>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
